[tool.poetry]
name = "masked-tabtransformers-lightning"
version = "0.1.0"
description = "Unsupervised training of tabtransformers"
authors = ["Charitarth Chugh <37895518+charitarthchugh@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
lightning = "^2.5.0.post0"
wandb = "^0.19.1"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"
tab-transformer-pytorch = "^0.4.1"
hyper-connections = "^0.1.5"
click = "^8.1.8"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
notebook = "^7.3.2"
ruff = "^0.8.4"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
