[tool.poetry]
name = "masked-tabtransformers-lightning"
version = "0.1.0"
description = "Unsupervised training of tabtransformers"
authors = ["Charitarth Chugh <37895518+charitarthchugh@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<3.15"
torch = "^2.9.1"
lightning = "^2.6.0"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"
tab-transformer-pytorch = "^0.5.3"
hyper-connections = "^0.2.1"
click = "^8.1.8"
tensorboard = "^2.20.0"
wandb = "^0.23.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
notebook = "^7.3.2"
ruff = "^0.8.4"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
